# ray_tracing

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  config.yaml  main.cpp
config/: cornell_box.yaml  cornell_smoke.yaml  default.yaml  final.yaml  quads.yaml  small.yaml  triangles.yaml
include/: aabb.h  bvh.h  camera.h  color.h  common.h  float_type.h  hittable.h  hittable_list.h  instance.h  interval.h  material.h  math_utils.h  motion.h  my_renderer.h  perlin.h  quaternion.h  rand_utils.h  ray.h  renderer.h  sphere.h  texture.h  transform.h  vec3.h
include/math/: mat3.h  mat4.h  math_utils.h  vec3.h
include/primitives/: constant_medium.h  quad.h  sphere.h  triangle.h
include/scene/: scene_factory.h
src/: color.cpp  math_utils.cpp  my_renderer.cpp  perlin.cpp  rand_utils.cpp  texture.cpp  vec3.cpp
src/scene/: scene_factory.cpp
